test/e2e/fixtures/queryparameter-present/queries.json
[
  {
    "url": "/queryparameter-present/?test_param=true",
    "method": "GET"
  },
  {
    "url": "/queryparameter-present/",
    "method": "GET"
  }
]
